<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginUser"
    android:background="@color/backgroundColor"
    android:padding="16dp">
    <ScrollView
        android:id="@+id/myscroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/messenger_lite"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Welcome back!\nLet’s get you signed in."
            tools:ignore="HardcodedText"
            android:textAlignment="textStart"
            android:lineSpacingExtra="2dp"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/emailH"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold|italic"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs_bg"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailSubject"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                android:textColorHint="#263238"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/emailH"
                app:layout_constraintStart_toStartOf="@+id/emailH"
                app:layout_constraintTop_toBottomOf="@+id/emailH"
                tools:ignore="VisualLintTextFieldSize" />
            <TextView
                android:id="@+id/passwordH"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/passwordTxt"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold|italic"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="@+id/emailEdt"
                app:layout_constraintEnd_toEndOf="@+id/emailEdt"
                app:layout_constraintTop_toBottomOf="@+id/emailEdt"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs_bg"
                android:id="@+id/passwordLinear"
                app:layout_constraintEnd_toEndOf="@+id/passwordH"
                app:layout_constraintStart_toStartOf="@+id/passwordH"
                app:layout_constraintTop_toBottomOf="@+id/passwordH"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/passwordhint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="4dp"
                    android:textColorHint="#263238"
                    android:textSize="16sp"
                    tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility_24px"
                    android:layout_gravity="end"
                    android:paddingStart="4dp"
                    android:paddingEnd="16dp"
                    android:id="@+id/eyeVisiblePasBTn"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forget password?"
                android:textSize="14sp"
                android:textStyle="normal|bold"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLinear"
                tools:ignore="HardcodedText" />
            <LinearLayout
                android:id="@+id/linearId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
                tools:ignore="HardcodedText"
                >

                <TextView
                    android:id="@+id/randomTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have any account?..."
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textStyle="italic"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:id="@+id/moveToSignUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Signup"
                    android:textColor="#D32F2F"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,VisualLintButtonSize"
                android:text="Login"
                style="@style/Widget.AppCompat.Button"
                android:textStyle="bold"
                android:background="@drawable/inputs_bg"
                android:layout_marginTop="8dp"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toBottomOf="@+id/linearId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

